gpt manualTestSuite AppendableJoinerTest.java